--- a/boilerplate.html
+++ b/boilerplate.html
@@ -26,12 +26,9 @@ include_once('bin/session.php');
     <?php include_once 'bin/nav.php'; ?>
     </td>
     <td class="body">
-    <h4>Session info:</h4><hr>
-    <?php
-    foreach($_SESSION as $key => $val) {
-    echo "<li>$key -> $val</li>";
-    }
-  ?>
+      <h1>Titles</h1><hr>
+      <br><hr>
+      <h4>More text</h4>
      
     </td>
   </tr>
